--- a/sample-frontend/index.html
+++ b/sample-frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polymarket Card Test - Clutch Backend</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -110,6 +111,20 @@
         </div>
 
         <div class="error" id="error" style="display: none;"></div>
+    </div>
+
+    <!-- Price History Modal -->
+    <div class="modal" id="priceHistoryModal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="modalTitle">Price History</h2>
+                <button class="modal-close" id="modalClose">&times;</button>
+            </div>
+            <div class="modal-body" id="modalBody">
+                <div class="chart-loading" id="chartLoading">Loading price history...</div>
+                <div class="charts-container" id="chartsContainer"></div>
+            </div>
+        </div>
     </div>
 
     <script src="app.js"></script>
